[tool.poetry]
name = "rsj-analysis"
version = "0.1.0"
description = "IR model analysis thought rsj weight"
authors = ["meshidenn <mesitahiro@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rsj_analysis"}]

[tool.poetry.dependencies]
python = "^3.10.12"
numpy = "^1.23.0"
pandas = "^2.0.2"



[tool.poetry.group.dev.dependencies]
pysen = "^0.10.4"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
